--- a/book/rainfall_runoff/runoff_processes.ipynb
+++ b/book/rainfall_runoff/runoff_processes.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The rainfall-runoff process"
+    "# The rainfall-runoff process (adjusted)"
    ]
   },
   {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "remove-input"
