layout fix attempt #3

--- a/book/hydrological cycle/reservoirs.ipynb
+++ b/book/hydrological cycle/reservoirs.ipynb
@@ -1,13 +1,18 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "(reservoirs)=\n",
-    "# Application: Reservoirs\n",
-    "\n",
+    "# Application: Reservoirs\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Introduction\n",
     "\n",
     "Storage of water can take place both on the surface and underground. However, when we think of a reservoir, we usually envision above-ground storage, such as in a closed valley where a reservoir is created after closure, forming a dammed lake. Nevertheless, flat areas like The Netherlands also have reservoirs. For instance, the Biesbosch basins serve as storage for river water used as drinking water, and the IJsselmeer, Delta basins, and polder waters also have a reservoir function. Dikes play the role of water barriers in these reservoirs, similar to the valley walls in a dammed lake.\n",
