--- a/book/rainfall_runoff/runoff_processes.ipynb
+++ b/book/rainfall_runoff/runoff_processes.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The rainfall-runoff process (adjusted)"
+    "# The rainfall-runoff process"
    ]
   },
   {
