--- a/book/urban_hydrology/urban_modeling.ipynb
+++ b/book/urban_hydrology/urban_modeling.ipynb
@@ -87,14 +87,35 @@
     "\n",
     "- **Storage Capacity**: Water can be stored on pervious land as depression or wetting loss storage. Contrary to the modeling approach for impervious surfaces, these are considered separately because of their different outward fluxes. The depression storage is significantly larger, with a typical size of **1-3 mm**. The wetting loss is smaller, usually in the range of **0-1 mm**.  \n",
     "\n",
-    "- **Maximum Fluxes**:  <span style=\"color: red;\">incomplete</span>\n"
+    "- **Maximum Fluxes**:  The outflow from the pervious land surface is limited by natural processes. Overland flow, which can be an important factor, is not usually designed to standards and is therefore not limited. The natural processes of outflow are additionally evaporation and infiltration.\n",
+    "    - As mentioned in the previous chapter, the infiltration capacity depends on the saturation rate of the subsurface. Although these dynamics are key, for simplicity, the saturated hydraulic conductivity can be used to get an idea of the infiltration rate, specifically after the rainfall event. This value is dependent on the soil composition and should be tested using infiltration tests. \n",
+    "    - The evaporation rate is the other natural outflow, which typically is orders of magnitude lower compared to infiltration (maximum of **4mm/day** in the Netherlands), calculatable through the Penmann-Monteith (although this has strong limitations as mentioned later).\n",
+    "\n",
+    "The mass balance for the pervious land surface storage becomes:\n",
+    "\n",
+    "$$\n",
+    "\\frac{dS_{s,per}}{dt} = P - Q_{p} - I_{s,t} - E_{l}\n",
+    "$$ (eq: pervious_land_surface_storage_mass_balance)\n",
+    "\n",
+    "where:\n",
+    "\n",
+    "|   |   |   |\n",
+    "| --- | --- | --- |\n",
+    "| $dS_{s,per}$ | Stored volume of water on the surface of the pervious area | ${L^3}$ |  \n",
+    "| $P$ | Percipitation onto the pervious area | $\\frac{L^3}{T}$ |  \n",
+    "| $Q_{p}$ | Overland flow from the pervious area to adjacent areas or into a drainage system | $\\frac{L^3}{T}$ |  \n",
+    "| $I_{s,t}$ | Infiltration rate over the area, dependent on time | $\\frac{L^3}{T}$ |  \n",
+    "| $E_{l}$ | Evaporation from the surface, either through transpiration or solar driven evaporation | $\\frac{L^3}{T}$ |  \n",
+    "\n",
+    "When considering the temporal scale, the mass-balance approach for the pervious land surface storage should have a temporal resolution of below 5min when considering the unsaturated hydraulic conductivity in the model, but can take longer timesteps (hourly) when the infiltration rate is considered constant. This because the relative low rates of outflow mean that the dynamics at the smaller scale are less dominant in the overall system processes.\n",
+    "\n",
+    "Considering the spatial scale, on the other hand, requires a high resolution. The urban subsurface is highly heterogenous in the make-up, meaning that the infiltration rates will vary significantly, depending on both soil type and the type of vegetation. The influence of vegetation on the infiltration rate can be significant: increase biotic activity can cause micropores to form in the soil which, combined with the root systems, can cause preferential flow paths allowing more rapid infiltration processes. Increasing the vegetative cover of an urban area can therefore significantly increase the infiltration rates."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(urban_drain_net_stor)=\n",
     "### Urban Drainage Network Storage  \n",
     "\n",
     "- **Storage Capacity**: Characteristic of Dutch urban drainage networks is their relatively large storage capacity, usually in the range of **6-11 mm**. This is due to the flatness of typical Dutch cities: large portions of the network require pumping to transport water to the treatment plant. To avoid unnecessary overflows into surface water, a large buffer capacity must be realized.  \n",
@@ -110,17 +131,15 @@
     "$$ (eq:urban_drainage_mass_balance)\n",
     "\n",
     "where:  \n",
-    "\n",
-    "- $dS_{sw}$ is the change in volume stored in the drainage network,  \n",
-    "- $Q_{s}$ ($\\frac{L^3}{T}$) is the runoff from impervious areas (roofs and roads, through gully pots and roof gullies, the outward flux $Q_{s}$ from the impervious calculation),  \n",
-    "- $Q_{p}$ ($\\frac{L^3}{T}$) is the runoff from pervious areas,  \n",
-    "- $Q_{c}$ ($\\frac{L^3}{T}$) is the wastewater production into the combined sewer (if it is a separate sewer network, this inflow is 0),  \n",
-    "- $I_{e}$ ($\\frac{L^3}{T}$) is the groundwater inflow into the UDS,  \n",
-    "- $Q_{d}$ ($\\frac{L^3}{T}$) is the outward flux consisting of three components:  \n",
-    "  1. Influent to the treatment plant  \n",
-    "  2. Combined sewer overflows  \n",
-    "  3. Flooding  \n",
-    "- $I_{d}$ ($\\frac{L^3}{T}$) is the outward flux into the groundwater, named exfiltration. This flux is only relevant if the groundwater table is below the invert elevation of the sewer network.  \n",
+    "|   |   |   |\n",
+    "| --- | --- | --- |\n",
+    "|$dS_{sw}$ | The change in volume stored in the drainage network | [$L^3$] |\n",
+    "|$Q_{s}$   | The runoff from impervious areas (roofs and roads, through gully pots and roof gullies), the outward flux from the impervious calculation  | $\\frac{L^3}{T}$ |  \n",
+    "|$Q_{p}$ | The runoff from pervious areas, the outward flux from the pervious calculation | $\\frac{L^3}{T}$ | \n",
+    "|$Q_{c}$ | The wastewater production into the combined sewer (if it is a separate sewer network, this inflow is 0) | $\\frac{L^3}{T}$ |  \n",
+    "|$I_{e}$ | The groundwater inflow into the UDS caused by leakages when the water table is above the UDS network | $\\frac{L^3}{T}$ |\n",
+    "|$Q_{d}$ | The outward flux consisting of three components:  1. Influent to the treatment plant 2. Combined sewer overflows 3. Flooding  | $\\frac{L^3}{T}$ | \n",
+    "|$I_{d}$ | The outward flux into the groundwater, named exfiltration, caused by leakages when the water table is below the UDS network| $\\frac{L^3}{T}$ | \n",
     "\n",
     "The two fluxes $I_{e}$ and $I_{d}$ can be significant when considering the dry weather flow conditions (and therefore also the annual loading) of the UDS. They are quantified at the UDS network level and are given as a constant infiltration or exfiltration rate. If the groundwater level is highly variable, the infiltration and exfiltration change based on the groundwater level. Within the mass-balance modeling approach, this is not considered explicitly. When a rain event occurs, the inflows $Q_{s}$ and $Q_{p}$ and outward flux $Q_{d}$ tend to be much larger.  \n",
     "\n",
@@ -378,19 +397,7 @@
     "ToC \\geq T_{rain}\n",
     "$$ (eq:toc_condition)  \n",
     "\n",
-    "where $T_{rain}$ is the duration of the rainfall event used to determine the peak outflow.  \n",
-    "\n",
-    "This condition is derived from the key principle of hydrograph superposition: the hydrographs can only *all* be superimposed at the outflow if the respective peaks arrive at the same time.  \n",
-    "\n",
-    "To illustrate this, we will model three scenarios: rainfall intensities of **10 mm/hr**, lasting for **5, 6, and 7 minutes**, respectively.  \n",
-    "\n",
-    "From the results, you can see that the 5min rainfall event case <span style=\"color: red;\">we have to finalise this based on the code</span>.\n",
-    "\n",
-    "The concept of time of concentration is not only useful to assess if the Rational Method can be applied, but it can also be used to determine the critical rainfall duration.  \n",
-    "\n",
-    "Thinking back to the **IDF curves** <span style=\"color: red;\">ref back to these curves, I assume they were discussed in the rainfall section</span>, shorter rainfall events have a higher intensity. However, if the intensities are below the time of concentration, the resulting peak flow is not necessarily higher compared to a less intense but longer-duration rainfall event, where all the individual hydrographs in the system could be superimposed.  \n",
-    "\n",
-    "Having an idea of the travel times of water through a catchment is therefore a key starting point when designing the relevant outflow points. The typical velocity in a sewer network is **1 m/s**.\n"
+    "where $T_{rain}$ is the duration of the rainfall event used to determine the peak outflow.  This condition is derived from the key principle of hydrograph superposition: the hydrographs can only *all* be superimposed at the outflow if the respective peaks arrive at the same time.  The concept of time of concentration is not only useful to assess if the Rational Method can be applied, but it can also be used to determine the critical rainfall duration: although shorter rainfall events have a higher intensity this is not always the critical. If the intensities are below the time of concentration, the resulting peak flow is not necessarily higher compared to a less intense but longer-duration rainfall event, where all the individual hydrographs in the system could be superimposed. Having an idea of the travel times of water through a catchment is therefore a key starting point when designing the relevant outflow points. The typical velocity in a sewer network is **1 m/s**.\n"
    ]
   },
   {
@@ -460,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "remove-cell"
@@ -546,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "remove-cell"
@@ -663,14 +670,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mass-balance modeling"
+    "## Mass-balance modeling\n",
+    "\n",
+    "In the previous section of this chapter, we looked at the way the individual components of the urban water mass-balance model are set-up. This, however, does not create a comprehensive model of the urban hydrological processes. For this to be achieved, those individual components have to be linked. The linking between the models is relatively straightforward, as the outputs from individual processes can be linked to the inputs of others. This is the reason that the boundary conditions are important, at some point the outward flux of a mass-balance section has to \"disappear\". The main difficulty with hydrological modelling of the urban area is, as with most urban hydrological and metereological processes, the heterogeneous nature of the urban environment. This leads to complications in the spatial resolution at which the model is representative. \n",
+    "\n",
+    "From a spatial perspective, difficulty arises as the area needs to be sufficiently large for the hydraulic simplification (inherent in any hydrological model) to be valid, but if the area modelled is too large, the dominant hetereogeneities might not be captured. To this effect, there is no right or wrong answer in the spatial discretisation. The model structure (i.e. the number of submodels and their connections) of each unique model needs to be validated, either directly to data or through the use of distributed hydraulic models, ensuring that the model mimics the hydrological behaviour of the sub-system of interest. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(urban_evap_model)=\n",
+    "\n",
     "## Evaporation modeling"
    ]
   },
