--- a/book/evaporation/evap_exercises.ipynb
+++ b/book/evaporation/evap_exercises.ipynb
@@ -642,7 +642,7 @@
     "| Air Temperature                      | 25      | degrees Celsius  |\n",
     "| Wind speed                       | 3       | m/s              |\n",
     "| Relative humidity                | 50      | %                |\n",
-    "| $albedo$   | 30    | %            |\n",
+    "| Albedo   | 30    | %            |\n",
     "\n",
     "\n",
     "Furthermore, the following data applies:\n",
@@ -651,11 +651,11 @@
     "|----------|----------|-------------|\n",
     "| $c_p$       | 1004            | J/kg/K          |\n",
     "| $ρ_a$       | 1.205           | kg/m$^3$        |\n",
-    "| $λ$         | $2.45*10^{10}$  | J/kg            |\n",
+    "| $λ$         | $2.45\\cdot10^{10}$  | J/kg            |\n",
     "| $\\gamma$    | 0.066           | kPa/°C          |\n",
     "| $ρ_w$       | 1000            | kg/m$^3$        |\n",
-    "| $albedo$    | 0.23            |                 |\n",
-    "| $σ$         | $4.9*10^{-3}$   | J/d/m$^2$/K$^4$ |\n",
+    "| Albedo       | 0.23            |                 |\n",
+    "| $σ$         | $4.9\\cdot10^{-3}$   | J/d/m$^2$/K$^4$ |\n",
     "\n",
     "To estimate evaporation, KNMI calculates the Makkink evaporation because this equation uses global radiation, which is easy to measure. This is in contrast to, for example, the Penman-Monteith equation, which requires net radiation.\n",
     "\n",
