--- a/book/hydrological cycle/reservoirs.ipynb
+++ b/book/hydrological cycle/reservoirs.ipynb
@@ -72,6 +72,8 @@
     "\n",
     "where $S_1$ represents the storage of the reservoir at water level $h_1$, and $A(h)$ is the surface area as a function of the water level.\n",
     "\n",
+    "DOES THE EQUATION ABOVE LOOK OKAY?\n",
+    "\n",
     "It is evident that the entire volume of the reservoir cannot be used; the water below the lowest discharge opening is called the *dead storage* (NL: *dode berging*). This dead storage is not lost but ensures that the reservoir never runs dry, which could lead to significant environmental problems such as fish mortality, odor, and permanent ecological damage. Sedimentation can also occur in this part of the reservoir without reducing the useful storage volume. The maximum storage under normal conditions is typically determined by the height of the emergency spillway. During extreme flow conditions, the water level can still rise over the spillway, creating temporary additional storage, which can be substantial due to the maximum surface area ($A_\\text{max}$). However, this additional storage cannot be retained and is uncontrollable.\n",
     "\n",
     "In the original river channel, a variable amount of water was already stored, representing the amount of water present in that section of the river at a specific time. This storage is indicated in {numref}`HC_res_characteristics` by the line parallel to the riverbed. For purposes such as reducing the risk of downstream flooding, this original storage should not be considered when determining the increase in storage capacity. The increase in storage is referred to as the *effective storage* (NL: *effectieve berging*)."
