--- a/book/introduction/examples.ipynb
+++ b/book/introduction/examples.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Examples\n",
     "\n",
-    "The societal context of hydrology and its relationship with civil engineering can be clarified through a number of specific problems and use cases related to water. In the following paragraphs numerous issues and activities concerning water are addressed, which may influence the water management of a region, depending on the location. In most cases, water management is thus influenced by human actions."
+    "The societal context of hydrology and its relationship with civil engineering can be clarified through a number of specific problems and use cases related to water. In the following paragraphs numerous issues and activities concerning water are addressed, which may influence the water management of a region, depending on the location. In most cases, water management is thus influenced by human interventions."
    ]
   },
   {
@@ -48,7 +48,7 @@
     "\n",
     "Residents used composting toilets and stored water, but shortages of resources like tanks and bottled water were still common. City officials struggled to respond, emphasizing the need for long-term planning and conservation.\n",
     "\n",
-    "This crisis served as a global warning about potential water scarcity in major cities. Water-saving tips and community efforts helped, but the challenge and effort was enormous.\n",
+    "This crisis served as a global warning about potential water scarcity in major cities. Water-saving tips and community efforts helped, but the challenge and effort were enormous.\n",
     "\n",
     "To further understand how disruptions in the natural water cycle occur, see [Chapter 2](https://teachbooks.tudelft.nl/engineering-hydrology/hydrological%20cycle/nomenclature.html) Hydrological cycle.\n",
     "\n",
@@ -68,7 +68,7 @@
     "\n",
     "Among other works, the project improved the channel stabilization by providing channel cutoffs, building dikes and dredging activities to adjust the waterflow in the river {cite:p}`armycorps-2019`. The use of hydrology to adjust the flow in the river served both for effective flood risk management and the enhancement of the river as a navigation channel.\n",
     "\n",
-    "For more information on how to manage water resources and control water flow, refer to [Chapter 2](https://teachbooks.tudelft.nl/engineering-hydrology/hydrological%20cycle/nomenclature.html) Hydrological cycle.\n",
+    "For more information on how to manage water resources and control water flow, see [Chapter 2](https://teachbooks.tudelft.nl/engineering-hydrology/hydrological%20cycle/nomenclature.html) Hydrological cycle.\n",
     "\n",
     "\n",
     "## Watershed management\n",
@@ -88,7 +88,7 @@
     "\n",
     "The NWDPRA has had a positive impact on the watershed, including the Tribals of Chhattisgarh {cite:p}`NWDPRA`. By succesfully managing the water resources, crop yield productivity and annual income for residents was increased.\n",
     "\n",
-    "For more information on how to manage water resources and control water flow, refer to [Chapter 2](https://teachbooks.tudelft.nl/engineering-hydrology/hydrological%20cycle/nomenclature.html) Hydrological cycle.\n",
+    "For more information on how to manage water resources and control water flow, see [Chapter 2](https://teachbooks.tudelft.nl/engineering-hydrology/hydrological%20cycle/nomenclature.html) Hydrological cycle.\n",
     "\n",
     "\n",
     "## Glacier retreat and water resource uncertainty\n",
@@ -159,7 +159,7 @@
     "\n",
     "The Rhine-Meuse Delta in the Netherlands is at risk of saltwater intrusion as a result of climate change, subsidence of the area and water management {cite:p}`deltares-2018`. Leaving this untreated may result in reduced freshwater availability, increased salinity of soil and water, corrosion of infrastructure and increased risk of flooding.\n",
     "\n",
-    "According to Deltares, water management at the Volkerak sluices and Hagestein weir proved insufficiently effective. The discharge of withdrawal of water from the river system may be more effective, though.\n",
+    "According to Deltares, water management at the Volkerak sluices and Hagestein weir proved insufficiently effective. The discharge provided by withdrawal of water from the river system may be more effective, though.\n",
     "\n",
     "For more information on processes involved in groundwater, see [Chapter 6](https://teachbooks.tudelft.nl/engineering-hydrology/groundwater/nomenclature.html) Groundwater.\n",
     "\n",
@@ -175,7 +175,7 @@
     "Contaminated tapwater in Flint <br/> – photo by {cite:p}`flint1-2018`.\n",
     "```\n",
     "\n",
-    "In 2014, the city of Flint (Michigan) entered a water crisis when the city switched its water source from Lake Huron to the Flint River to try and save money {cite:p}`flint1-2018`. The waterway, however, received raw sewage from the city's waste treatment facility and agricultural and urban runoff, including toxics from nearby landfills.\n",
+    "In 2014, the city of Flint (Michigan) entered a water crisis when the city switched its water source from Lake Huron to the Flint River to try and save money {cite:p}`flint1-2018`. The river, however, received raw sewage from the city's waste treatment facility and agricultural and urban runoff, including toxics from nearby landfills.\n",
     "\n",
     "The city has launched a groundwater remediation project to deal with the lead that leached into the groundwater which, combined with other contaminants such as PFAS, are linked with health problems. The $100 million project is currently in progress, and the city is working with the Environmental Protection Agency (EPA) to solve the issues.\n",
     "\n",
@@ -193,13 +193,14 @@
     "The Seine in Paris – photo by {cite:p}`steenkeste-2023`.\n",
     "```\n",
     "\n",
-    "In many cities in Europe, among which the Spree river in Berlin {cite:p}`osullivan-2014`, the Thames in London {cite:p}`munro-2019` and the Seine in Paris, outdated drainage systems are known to pollute large rivers that run through the cities.\n",
+    "In many cities in Europe, among which the Spree river in Berlin {cite:p}`osullivan-2014`, the Thames in London {cite:p}`munro-2019` and the Seine in Paris, outdated drainage systems were known to pollute large rivers that ran through the cities.\n",
     "\n",
-    "The current mayor of Paris, Anne Hidalgo, has released plans to help reduce the pollution in the Seine {cite:p}`osullivan-2021`. The goal is to make the river swimmable before the 2024 Olympics, aiming to use the river in the Olympic triathlon event.\n",
+    "The mayor of Paris, Anne Hidalgo, had released plans to help reduce the pollution in the Seine {cite:p}`osullivan-2021`. The goal was to make the river swimmable before the 2024 Olympics, aiming to use the river in the Olympic triathlon event.\n",
     "\n",
-    "The project's main solution to the issue is to build a new stormwater holding tank with a capacity of 46,000 cubic meters, costing approximately 1.4 billion euros {cite:p}`osullivan-2021`. Storing stormwater in the tank and pumping its contents back into the system once the storm has reduced will significantly reduce the amount of sewage entering the Seine.\n",
+    "The project's main solution to the issue was to build a new stormwater holding tank with a capacity of 46,000 cubic meters, costing approximately 1.4 billion euros {cite:p}`osullivan-2021`. Storing stormwater in the tank and pumping its contents back into the system once the storm had reduced significantly reduced the amount of sewage entering the Seine.\n",
     "\n",
-    "Improving the drainage of a large city like Paris can significantly improve the living conditions for its residents. See [Chapter 7](https://teachbooks.tudelft.nl/engineering-hydrology/rainfall_runoff/nomenclature.html) Rainfall runoff for more information on the rainfall-runoff processes, a crucial part of the drainage process.\n",
+    "\n",
+    "Improving the drainage of a large city like Paris significantly improved the living conditions for its residents. See [Chapter 7](https://teachbooks.tudelft.nl/engineering-hydrology/rainfall_runoff/nomenclature.html) (Rainfall-runoff relations) for more information on the rainfall-runoff processes, a crucial part of the drainage process.\n",
     "\n",
     "\n",
     "## Erosion control & Land slides\n",
@@ -217,7 +218,7 @@
     "\n",
     "Kusiong village, despite its annual tsunami preparedness drills, was unprepared for the mountain-related hazards that led to this catastrophic mudslide. More extensive erosion control, for instance through the implementation of reinforced retaining walls, vegetation cover, and proper land-use planning, could have potentially mitigated the damage caused by this disaster.\n",
     "\n",
-    "To further understand how rainfall affects areas, see [Chapter 7](https://teachbooks.tudelft.nl/engineering-hydrology/rainfall_runoff/nomenclature.html) Rainfall runoff for more information.\n",
+    "To further understand how rainfall affects areas, see [Chapter 7](https://teachbooks.tudelft.nl/engineering-hydrology/rainfall_runoff/nomenclature.html) (Rainfall-runoff relations) for more information.\n",
     "\n",
     "\n",
     "## Flooding\n",
@@ -245,7 +246,7 @@
     " - Improving flood forecasting and early warning systems;\n",
     " - Investing in flood-resistant infrastructure.\n",
     "\n",
-    "The measures mentioned are typical means of managing the rainfall-runoff process. See [Chapter 7](https://teachbooks.tudelft.nl/engineering-hydrology/rainfall_runoff/nomenclature.html) Rainfall runoff for more information.\n"
+    "The measures mentioned are typical means of managing the rainfall-runoff process. See [Chapter 7](https://teachbooks.tudelft.nl/engineering-hydrology/rainfall_runoff/nomenclature.html) (Rainfall-runoff relations) for more information.\n"
    ]
   },
   {
