changinging code from plotly_mimi to notebook

--- a/book/evaporation/evap_processes.ipynb
+++ b/book/evaporation/evap_processes.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "remove-input"
@@ -2111,7 +2111,7 @@
     ")\n",
     "\n",
     "# Display the figure\n",
-    "pio.show(fig, renderer=\"plotly_mimetype\")  "
+    "pio.show(fig, renderer=\"notebook\")  "
    ]
   },
   {
