plotly_mimetype + fig.show()

--- a/book/evaporation/evap_processes.ipynb
+++ b/book/evaporation/evap_processes.ipynb
@@ -2111,7 +2111,7 @@
     ")\n",
     "\n",
     "# Display the figure\n",
-    "pio.show(fig, renderer=\"notebook\")  "
+    "fig.show()\n"
    ]
   },
   {
