--- a/book/hydrological cycle/water balance.ipynb
+++ b/book/hydrological cycle/water balance.ipynb
@@ -287,12 +287,12 @@
    "source": [
     "## Time influence\n",
     "\n",
-    "It is important to choose the correct time scale when drawing up a water balance and working with it. By choosing a longer time scale, the inflow and outflow quantities of the system will increase. However, the change in storage will both increase and decrease. In the long term, the influence of the change of storage will become limited be little. By taking a time period of several years the change of storage can be assumed negligible."
+    "It is important to choose the correct time scale when drawing up a water balance and working with it. By choosing a longer time scale, the inflow and outflow quantities of the system will increase. The storage change can either increase or decrease, but the relative influence of storage will become limited with increasing time scales. By taking a time period of several years the change of storage can be assumed negligible."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -461,14 +461,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.4"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "5238573367df39f7286bb46f9ff5f08f63a01a80960060ce41e3c79b190280fa"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
