--- a/book/rainfall_runoff/runoff_processes.ipynb
+++ b/book/rainfall_runoff/runoff_processes.ipynb
@@ -7054,7 +7054,7 @@
     "height: 300px \n",
     "name: relatieneerslagenafvoerbareneerslag\n",
     "---\n",
-    "Generally observed relation between precipitation, \"losses\" and effective precipitation. (Own work)\n",
+    "Generally observed relation between precipitation, ``losses'' and effective precipitation. (Own work)\n",
     "```"
    ]
   },
@@ -7062,14 +7062,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calculations with \"Losses\"\n",
+    "### Calculations with ``Losses''\n",
     "\n",
     "Quantitatively determining the amount of effective precipitation involves a high degree of uncertainty in hydrology: there are many influencing factors, which are difficult to quantify, and collecting all the necessary data is practically impossible. Sometimes, it is possible to reasonably estimate the total magnitude of the \"losses,\" but determining their distribution over the duration of a rainfall event remains challenging. There are several concepts to account for the \"losses.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "remove-input"
@@ -7136,7 +7136,7 @@
     "        color=\"lightgray\",\n",
     "        hatch=\"///\",\n",
     "        edgecolor=\"black\",\n",
-    "        label=f\"Losses)\"\n",
+    "        label=\"Losses\"\n",
     "    )\n",
     "    # Non-lost portion (top)\n",
     "    ax.bar(\n",
@@ -7147,7 +7147,7 @@
     "        color=\"forestgreen\",\n",
     "        edgecolor=\"black\",\n",
     "        linewidth=1.5,\n",
-    "        label=f\"Effective precipitation\"\n",
+    "        label=\"Effective precipitation\"\n",
     "    )\n",
     "    # Optional: infiltration curve for scenario D\n",
     "    if show_infiltration:\n",
@@ -7186,7 +7186,7 @@
     "height: 0px\n",
     "name: verliesfunctiesenafvoerbareneerslag\n",
     "---\n",
-    "Four different concepts to account for losses during runoff from precipitation – photo from {cite:p}`instropicsEVA`. \n",
+    "Four different concepts to account for losses during runoff from precipitation. (Own work)\n",
     "```"
    ]
   },
@@ -7202,10 +7202,10 @@
     "- C: This graph is similar to B, but there is a specific loss capacity that must be satisfied before runoff occurs.\n",
     "- D: Here, an infiltration function is used to represent the variation of loss intensity over time. Only the rainfall above this curve contributes to runoff. An infiltration function like this can be determined, for example, using Horton's equation {cite:p}`horton-1945` where the infiltration capacity rate is an exponential function of time, which decays to a constant rate.\n",
     "\n",
-    "Of course, combinations of the above functions are also possible, such as $A$ and $C$.\n",
+    "Of course, combinations of the above functions are also possible, such as A and C.\n",
     "\n",
     "```{note}\n",
-    "Initially, it was stated that the loss intensity decreases over time, which only function $D$ would comply with. However, during intermediate periods with lower rainfall intensities, some recovery of the potential loss intensity may occur. Therefore, the remaining concepts can still have practical utility.\n",
+    "Initially, it was stated that the loss intensity decreases over time, which only function D would comply with. However, during intermediate periods with lower rainfall intensities, some recovery of the potential loss intensity may occur. Therefore, the remaining concepts can still have practical utility.\n",
     "```\n",
     "\n",
     "### Antecedent wetness of a catchment\n",
